kubernetes/go-to-do.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-to-do-deployment
  labels:
    app: backend-to-do
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-to-do
  template:
    metadata:
      labels:
        app: backend-to-do
    spec:
      containers:
        - name: backend-to-do
          image: kraskobohdan/to-do-app:backend
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: backend-to-do
spec:
  selector:
    app: backend-to-do
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
