kubernetes/ingress-controler.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-to-do
          servicePort: 80
      - path: /api/
        backend:
          serviceName: backend-to-do
          servicePort: 8080
